--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -11,6 +11,6 @@ jobs:
       - name: "hello-action"
         uses: ./.github/actions/hello-world
         with: 
-          firstGreeting: "Mary had a little lamb"
-          secondGreeting: "With fleece as white as snow"
+          firstGreeting: default
+          secondGreeting: default
           thirdGreeting: "Tra-la-la-la-la"
